# GEMINI_DOC

./: README.md  pyproject.toml
AGENT_DEVELOPMENT_KIT/: agent.py
AGENT_DEVELOPMENT_KIT/AGENT_SKILLS/: README.md  skill.py
AGENT_DEVELOPMENT_KIT/AUTHENTICATION/: README.md  openapi_auth.py
AGENT_DEVELOPMENT_KIT/CUSTOM_MCP_TOOLS/: README.md  __init__.py  agent.py  my_adk_mcp_server.py  stderr_test.txt
AGENT_DEVELOPMENT_KIT/LOOP_AGENT/: README.md  agent.py
AGENT_DEVELOPMENT_KIT/MCP_TOOLS/: README.md  agent.py
AGENT_DEVELOPMENT_KIT/OPENAPI/: README.md  openapi.py
AGENT_DEVELOPMENT_KIT/PARALLEL_AGENT/: README.md  agent.py
AGENT_DEVELOPMENT_KIT/SEQUENTIAL_AGENT/: README.md  agent.py
AGENT_DEVELOPMENT_KIT/STREAMING/: README.md
AGENT_DEVELOPMENT_KIT/TOOL_AGENT/: README.md  agent.py
AGENT_DEVELOPMENT_KIT/qwen_agent/: README.md  agent.py
AUDIO_GENERATION/MULTI_SPEAKER/: README.md  multi_speaker.py
AUDIO_GENERATION/SINGLE_SPEAKER/: README.md  single_speaker.py
FASTAPI/: app.py
FASTAPI/DELETE/: README.md  app.py
FASTAPI/GET/: app.py
FASTAPI/POST/: README.md  app.py
FASTAPI/PUT/: README.md  app.py
IMAGE_GENERATION/CONTEXT_CACHING/: README.md  context_caching.py
IMAGE_GENERATION/FUNCTION_CALLING/: README.md  function_calling.py
IMAGE_GENERATION/IMAGE_GENERATION/: Image_generation.py  README.md
IMAGE_GENERATION/IMAGE_UNDERSTANDING/: README.md
IMAGE_GENERATION/STRUCTURED_OUTPUT/: README.md  structured.py  structured_streaming.py  structured_tools.py
LIVE_API/EPHEMERAL/: README.md  ephemeral_creation.py
OLLAMA/: ollama.py
(+40 files in other folders)
